test/org/midica/testfiles/failing/eff-cd-dest-unknown-1.midica
INCLUDE inc/instruments.midica


0: ctrl_dest
0:   .src(vol)
0:   .dest(voll,10%)
0:   .on()

